syntax = "proto3";

option go_package = "../category_pb";

package grpc_hwdhy;

import "google/api/annotations.proto";

service Category {
    rpc List (CategoryListRequest) returns (CategoryListResponse) {
        option (google.api.http) = {
            post: "/v1/category/list"
            body: "*"
        };
    }

    rpc Create (CategoryCreateRequest) returns (Response){
        option (google.api.http) = {
        post: "/v1/category/create"
                body: "*"
};
}
}

message CategoryCreateRequest {
    string name = 1;
    int64 pid = 2;
    string image = 3;
}

message Response {
    int64 code = 1;
}

message CategoryListRequest {
    int32 page = 1;
    int32 page_size = 2;
    int64 pid = 3;
}

message CategoryListResponse {
    int32 page = 1;
    int32 page_size = 2;
    int64 count = 3;
    repeated CategoryData category_data = 4;
}

message CategoryData {
    int64 id = 1;
    string name = 2;
    int64 pid = 3;
    string image = 4;
}